--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -106,22 +106,28 @@
                             </li>
                         {% endif %}
 
-                        <li>
-                            {% if val.expiry_date %}
-                                {% if val.is_near_expiry %}
-                                    <span class="fas fa-exclamation-triangle"></span>
-                                    This validation will SOON be automatically removed during cleanup on {{ val.expiry_date }}.
+                        {% if is_owner %}
+                            <li>
+                                {% if val.expiry_date %}
+                                    {% if val.is_near_expiry %}
+                                        <span class="fas fa-exclamation-triangle"></span>
+                                        This validation will SOON be automatically removed during cleanup on {{ val.expiry_date }}.
+                                    {% else %}
+                                        <span class="fas fa-calendar-alt"></span>
+                                        This validation will be automatically removed during cleanup on {{ val.expiry_date }}.
+                                    {% endif %}
                                 {% else %}
-                                    <span class="fas fa-calendar-alt"></span>
-                                    This validation will be automatically removed during cleanup on {{ val.expiry_date }}.
+                                    {% if val.is_archived %}
+                                        <span class="fas fa-archive"></span>
+                                        This validation has been archived. It will NOT be automatically removed during cleanup.
+                                    {% endif %}
                                 {% endif %}
-                            {% else %}
-                                {% if val.is_archived %}
-                                    <span class="fas fa-archive"></span>
-                                    This validation has been archived. It will NOT be automatically removed during cleanup.
-                                {% endif %}
-                            {% endif %}
-                        </li>
+                            </li>
+                        {% endif %}
+
+                        {% if val.doi %}
+                            <li>This result was published on zenodo with DOI <a target="_blank" href="https://doi.org/{{ val.doi }}">{{ val.doi }}</a>.</h5></li>
+                        {% endif %}
                     </ul>
 
                     {% if is_owner and val.is_deletable %}
