--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -7,7 +7,8 @@
 
     <div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
         <h1 class="jumbotron-heading">Validation Running...</h1>
-        <p class="lead text-muted">Your validation of {{ val.data_dataset }} data against {{ val.ref_dataset }} reference data is still running. You'll be notified via e-mail once it's finished.</p>
+        <p class="lead text-muted">
+            Your validation is still running. You'll be notified via e-mail once it's finished.</p>
         <p class="lead text-muted">You don't have to keep this page open for the validation to run.</p>
     </div>
 
@@ -15,7 +16,6 @@
 
     <div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
         <h1 class="jumbotron-heading">Validation Results</h1>
-        <p class="lead text-muted">Your validation of {{ val.data_dataset }} data against {{ val.ref_dataset }} reference data has finished. You can see the results below.</p>
     </div>
 
     <div class="container center-text">
