Introduce published validations button on landing page and in title bar, move menu items to dropdown menu

--- a/validator/static/css/service.css
+++ b/validator/static/css/service.css
@@ -45,6 +45,24 @@ html {
     margin-right: 1em;
 }
 
+.show > .btn-outline-primary.dropdown-toggle {
+    background-color: inherit;
+    color: #FFDB5C;
+    border-color: #FFDB5C;
+}
+
+.show > .btn-outline-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 .2rem rgba(248, 193, 0, .5);
+}
+
+.dropdown-item.navbar-btn-active {
+    color: initial;
+}
+
+.dropdown-item:active, .dropdown-item:focus, .dropdown-item:hover {
+    background-color: rgba(248, 193, 0, .5);
+}
+
 .container {
     max-width: 960px;
 }
