Improve publication error message

--- a/validator/templates/common/base.html
+++ b/validator/templates/common/base.html
@@ -68,6 +68,10 @@
     <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
+    <script type="text/javascript">
+        admin_mail = '{{admin_mail}}';
+    </script>
+
     {% block dialogs %}
     {% endblock %}
 
