Add stub for updated help page for published validations

--- a/validator/templates/validator/help.html
+++ b/validator/templates/validator/help.html
@@ -15,7 +15,7 @@
         <a href="#validation">Validate Page</a><br/>
         <a href="#results_list">My Validations - Results List Page</a><br/>
         <a href="#results">Validation Results Page</a><br/>
-
+        <a href="#published">Published Validations Page</a><br/>
     </p>
 
     <a id="validation"></a>
@@ -283,9 +283,20 @@
     <a id="results_graph"></a>
     <img class="scaled_image mb-3" src="../../static/images/help/results_graphs.png">
 
+    <a id="published"></a>
+    <h1 id="help4" class="h3 mb-3 font-weight-normal">Published Validations Page</h1>
+
+    <p>
+        The list shows validations on the QA4SM service that have been published to
+        <a target="_blank" href="https://zenodo.org/">Zenodo</a> by their owners. This means the results can be cited
+        with a <a target="_blank" href="https://www.doi.org/">DOI</a>.
+    </p>
+
     <p class="mt-5">If you want to email us to send comments, report errors, or ask questions, you can do so at qa4sm (at) awst.at .</p>
 
     <a href="#">Back to top</a>
+
+
 
 </div>
 
