--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -128,7 +128,7 @@
                     </ul>
 
                     {% if is_owner and val.is_unpublished %}
-                        <div id="patchButtonGroup" style="float: right;" class="{% if val.publishing_in_progress %} collapse {% endif %}">
+                        <div style="float: right;" class="patchButtonGroup{% if val.publishing_in_progress %} collapse {% endif %}">
                             <button class="btn btn-sm btn-primary" title="Remove result" onclick="ajax_delete_result('{{ val.id }}')"><span class="fas fa-times"></span> Remove</button>
                             {% if val.is_archived %}
                                 <button class="btn btn-sm btn-primary" title="Un-archive" onclick="ajax_archive_result('{{ val.id }}', false)"><span class="fas fa-calendar-alt"></span> Un-archive</button>
@@ -136,13 +136,17 @@
                                 <button class="btn btn-sm btn-primary" title="Extend lifespan" onclick="ajax_extend_result('{{ val.id }}', true)"><span class="fas fa-calendar-plus"></span> Renew</button>
                                 <button class="btn btn-sm btn-primary" title="Archive" onclick="ajax_archive_result('{{ val.id }}', true)"><span class="fas fa-archive"></span> Archive</button>
                             {% endif %}
-                            <button class="btn btn-sm btn-primary" title="Publish on Zenodo" onclick="ajax_publish_result('{{ val.id }}')"><span class="fas fa-book"></span> Publish</button>
+                            {% if val.output_file %}
+                                <button class="btn btn-sm btn-primary" title="Publish on Zenodo" onclick="ajax_publish_result(this, '{{ val.id }}')"><span class="fas fa-book"></span> Publish</button>
+                            {% endif %}
                         </div>
+                        {% if val.output_file %}
+                            <div class="publishingNote small text-muted {% if not val.publishing_in_progress %} collapse {% endif %}" style="float: right">
+                                <div class="spinner-border spinner-border-sm" role="status"><span class="sr-only">Publishing in progress...</span></div>
+                                Publishing in progress...
+                            </div>
+                        {% endif %}
                     {% endif %}
-                    <div id="publishingNote" class="small text-muted {% if not val.publishing_in_progress %} collapse {% endif %}" style="float: right">
-                        <div class="spinner-border spinner-border-sm" role="status"><span class="sr-only">Publishing in progress...</span></div>
-                        Publishing in progress...
-                    </div>
                 </div>
             </div>
         </div>
