--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -81,7 +81,7 @@
                                         <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>
                                     {% endif %}
                                     {% if valrun.is_unpublished %}
-                                        <span id="patchButtonGroup" class="{% if valrun.publishing_in_progress %} collapse {% endif %}">
+                                        <span class="patchButtonGroup{% if valrun.publishing_in_progress %} collapse {% endif %}">
                                             <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}')"><span class="fas fa-times"></span></button>
                                             {% if valrun.is_archived %}
                                                 <button class="btn btn-sm btn-primary btn-action" title="Un-archive" onclick="ajax_archive_result('{{ valrun.id }}', false)"><span class="fas fa-calendar-alt"></span></button>
@@ -89,12 +89,7 @@
                                                 <button class="btn btn-sm btn-primary btn-action" title="Extend lifespan" onclick="ajax_extend_result('{{ valrun.id }}', true)"><span class="fas fa-calendar-plus"></span></button>
                                                 <button class="btn btn-sm btn-primary btn-action" title="Archive" onclick="ajax_archive_result('{{ valrun.id }}', true)"><span class="fas fa-archive"></span></button>
                                             {% endif %}
-                                            <button class="btn btn-sm btn-primary btn-action" title="Publish on Zenodo" onclick="ajax_publish_result('{{ valrun.id }}')"><span class="fas fa-book"></span></button>
                                         </span>
-                                        <div id="publishingNote" class="small text-muted {% if not val.publishing_in_progress %} collapse {% endif %}" style="float: right; margin-top:0.5em;">
-                                            <div class="spinner-border spinner-border-sm" role="status"><span class="sr-only">Publishing...</span></div>
-                                            Publishing...
-                                        </div>
                                     {% endif %}
                                 {% endif %}
                             </div>
