Prereserve DOIs and put them into netcdf files before publishing

--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -117,7 +117,7 @@
                                     {% endif %}
                                 {% else %}
                                     {% if val.doi %}
-                                        <span class="fas fa-book"></span> This result was published on zenodo with DOI <a target="_blank" href="https://doi.org/{{ val.doi }}">{{ val.doi }}</a>.
+                                        <span class="fas fa-book"></span> This result was published on zenodo with DOI <a target="_blank" href="{{doi_prefix}}{{ val.doi }}">{{ val.doi }}</a>.
                                     {% elif val.is_archived %}
                                         <span class="fas fa-archive"></span>
                                         This validation has been archived. It will NOT be automatically removed during cleanup.
