--- a/validator/templates/validator/published_results.html
+++ b/validator/templates/validator/published_results.html
@@ -22,7 +22,7 @@
                             <h5 class="my-0" style="float: left"><span class=" font-weight-normal">Name:</span> {{ valrun.name_tag }}</h5>
                         {% endif %}
                         <h5 class="my-0" style="float: right"><span class=" font-weight-normal">DOI:</span>
-                        <a class="doilink" target="_blank" href="https://doi.org/{{ valrun.doi }}">{{ valrun.doi }}</a></h5>
+                        <a class="doilink" target="_blank" href="{{doi_prefix}}{{ valrun.doi }}">{{ valrun.doi }}</a></h5>
                     </div>
                     <div class="card-body" style="padding: 0.5rem 1.25rem;">
                         <div class="row" style="justify-content: space-between;">
