--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -28,7 +28,7 @@
                                     <span class="fas fa-running" title="This validation is still running."></span>
                                 {% endif %}
                                 {% if valrun.doi %}
-                                    <a class="doilink" target="_blank" href="https://doi.org/{{ valrun.doi }}"><span class="fas fa-book" title="This result has been published with zenodo. It will NOT be automatically removed during cleanup."></span></a>
+                                    <a class="doilink" target="_blank" href="{{doi_prefix}}{{ valrun.doi }}"><span class="fas fa-book" title="This result has been published with zenodo. It will NOT be automatically removed during cleanup."></span></a>
                                 {% elif valrun.is_archived %}
                                     <span class="fas fa-archive" title="This validation has been archived. It will NOT be automatically removed during cleanup."></span>
                                 {% endif %}
