Switching to new domain qa4sm.eu

--- a/validator/templates/auth/password_reset_email.html
+++ b/validator/templates/auth/password_reset_email.html
@@ -1,4 +1,4 @@
-You're receiving this email because you requested a password reset for your user account on the QA4SM webservice (https://qa4sm.eodc.eu/).
+You're receiving this email because you requested a password reset for your user account on the QA4SM webservice ({{site_url}}/).
 
 Please go to the following page and choose a new password:
 {% block reset_link %}
