--- a/validator/templates/validator/terms.html
+++ b/validator/templates/validator/terms.html
@@ -67,7 +67,7 @@
         <ol>
         <li>
             The QA4SM service should be cited using the following text:
-            <p style="margin-left: 40px"><i>The results used in this study were generated using the QA4SM service available at: qa4sm.eodc.eu. The service
+            <p style="margin-left: 40px"><i>The results used in this study were generated using the QA4SM service available at: {{site_url}}. The service
             was developed by TU Wien GEO and AWST GmbH. The results were generated on [date of processing].</i>
         </li>
         <li>
