--- a/validator/templates/validator/index.html
+++ b/validator/templates/validator/index.html
@@ -55,7 +55,7 @@
                 <div class="carousel-item">
                     <img class="third-slide" src="{% static 'images/map_us_spearman.png' %}">
                     <div class="image-attribution">
-                        <a href="https://qa4sm.eodc.eu/">Image: QA4SM</a>
+                        <a href="{{site_url}}/">Image: QA4SM</a>
                     </div>
                 </div>
             </div>
