Updating online help with publication process and fixing admin email

--- a/validator/templates/validator/alpha.html
+++ b/validator/templates/validator/alpha.html
@@ -6,7 +6,7 @@
 
     <p class="lead text-muted">This service is still in active development and we're in the alpha stage. Expect frequent changes and occasional outages.</p>
 
-    <p>If you want to email us to send comments, report errors, or ask questions, you can do so at qa4sm (at) awst.at .</p>
+    <p>If you want to email us to send comments, report errors, or ask questions, you can do so at {{admin_mail}}.</p>
 
     <a href="#">Back to top</a>
 
