--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -1,4 +1,5 @@
 {% extends 'common/base.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -13,7 +14,25 @@
             {% for valrun in myruns %}
                 <div class="card mb-4 mx-0 box-shadow" id="result_row_{{ valrun.id }}">
                     <div class="card-header">
-                        <h5 class="my-0" style="float: left"><span class=" font-weight-normal">Started:</span> {{ valrun.start_time }}</h5>
+                        <h5 class="my-0" style="float: left">
+                            {% if valrun.expiry_date %}
+                                {% if valrun.is_near_expiry %}
+                                    <span class="fas fa-exclamation-triangle" title="This validation will SOON be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
+                                {% else %}
+                                    <span class="fas fa-calendar-alt" title="This validation will be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
+                                {% endif %}
+                            {% else %}
+                                {% if valrun.progress == -1 %}
+                                    <span class="fas fa-ban" title="This validation was cancelled."></span>
+                                {% elif not valrun.end_time %}
+                                    <span class="fas fa-running" title="This validation is still running."></span>
+                                {% endif %}
+                                {% if valrun.is_archived %}
+                                    <span class="fas fa-archive" title="This validation has been archived. It will NOT be automatically removed during cleanup."></span>
+                                {% endif %}
+                            {% endif %}
+                            <span class=" font-weight-normal">Started:</span> {{ valrun.start_time }}
+                        </h5>
                         {% if valrun.name_tag %}
                             <h5 class="my-0" style="float: right"><span class=" font-weight-normal">Name:</span> {{ valrun.name_tag }}</h5>
                         {% endif %}
@@ -54,13 +73,18 @@
                                 {% if valrun.progress > -1 and valrun.progress < 100 and valrun.end_time == null %}
                                 <button class="btn btn-sm btn-primary btn-action" title="Cancel validation" onclick="ajax_stop_validation('{{ valrun.id }}')"><span class="fas fa-stop"></span></button>
                                 {% endif %}
-                                {% if valrun.end_time and valrun.output_file %}
-                                    <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>
-                                    <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>
-                                {% endif %}
-
                                 {% if valrun.end_time %}
                                     <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}')"><span class="fas fa-times"></span></button>
+                                    {% if valrun.output_file %}
+                                        <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>
+                                        <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>
+                                    {% endif %}
+                                    {% if valrun.is_archived %}
+                                        <button class="btn btn-sm btn-primary btn-action" title="Un-archive" onclick="ajax_archive_result('{{ valrun.id }}', false)"><span class="fas fa-calendar-alt"></span></button>
+                                    {% else %}
+                                        <button class="btn btn-sm btn-primary btn-action" title="Extend lifespan" onclick="ajax_extend_result('{{ valrun.id }}', true)"><span class="fas fa-calendar-plus"></span></button>
+                                        <button class="btn btn-sm btn-primary btn-action" title="Archive" onclick="ajax_archive_result('{{ valrun.id }}', true)"><span class="fas fa-archive"></span></button>
+                                    {% endif %}
                                 {% endif %}
                             </div>
                         </div>
@@ -107,39 +131,12 @@
 {% endblock %}
 
 {% block javascript %}
-    <script>
-        function ajax_delete_result(result_id) {
-            if (!confirm('Do you really want to delete the result?')) {
-                   return;
-               }
-            var url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}".replace('00000000-0000-0000-0000-000000000000',result_id);
-
-            $.ajaxSetup({
-                  headers: { "X-CSRFToken": '{{csrf_token}}' }
-            });
-
-            $.ajax({
-                url: url,
-                type: 'DELETE',
-                success: function (return_data) { $('#result_row_'+result_id).remove() }
-            });
-        }
-
-        function ajax_stop_validation(result_id) {
-            if (!confirm('Do you really want to stop the validation?')) {
-                return;
-            }
-            var url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}".replace('00000000-0000-0000-0000-000000000000', result_id);
-
-            $.ajaxSetup({
-                headers : { "X-CSRFToken" : '{{csrf_token}}' }
-            });
-
-            $.ajax({
-                url : url,
-                type : 'DELETE',
-                success : function(return_data) { location.reload(); }
-            });
-        }
+    <script type="text/javascript">
+        csrf_token = '{{csrf_token}}';
+        archive_result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
+        delete_result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
+        stop_validation_url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}";
+        extend_result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
     </script>
+    <script src="{% static 'js/results_buttons.js' %}"></script>
 {% endblock %}
